# plasma-bridge

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
backend/: CHANGELOG.md  CMakeLists.txt  README.md
backend/docs/: README.md  architecture.md  development.md  getting-started.md
backend/src/adapters/: CMakeLists.txt
backend/src/adapters/audio/: CMakeLists.txt  pulse_audio_state_observer.cpp  pulse_audio_state_observer.h  pulse_audio_volume_controller.cpp
backend/src/adapters/media/: CMakeLists.txt  media_observer.h  mpris_media_controller.cpp  mpris_media_controller.h  mpris_media_observer.cpp  mpris_media_observer.h
backend/src/adapters/window/: CMakeLists.txt  kwin_script_window_backend.cpp  kwin_script_window_backend.h  window_observer.h
backend/src/api/: CMakeLists.txt  audio_control_http_helpers.h  json_envelope.cpp  json_envelope.h  media_control_http_helpers.cpp  media_control_http_helpers.h  prepare_docs_assets.cmake  snapshot_http_server.cpp  snapshot_http_server.h  state_websocket_server.cpp  state_websocket_server.h  window_control_http_helpers.cpp  window_control_http_helpers.h
backend/src/api/docs_assets/: http.html  index.html
backend/src/app/: CMakeLists.txt  main.cpp
backend/src/common/: CMakeLists.txt  media_state.cpp  media_state.h  plasma_bridge_build_config.h.in  window_state.cpp  window_state.h
backend/src/control/: CMakeLists.txt  audio_device_controller.h  audio_volume_controller.cpp  audio_volume_controller.h  media_controller.cpp  media_controller.h  window_activation_controller.cpp  window_activation_controller.h
backend/src/state/: CMakeLists.txt  media_state_store.cpp  media_state_store.h
backend/tests/: CMakeLists.txt
backend/tests/feature/: test_cli_binaries.cpp  test_snapshot_http_server.cpp  test_state_websocket_server.cpp
backend/tests/helpers/: fake_audio_probe_cli.cpp  fake_media_probe_cli.cpp  fake_window_probe_cli.cpp
backend/tests/support/: test_support.cpp  test_support.h
backend/tests/unit/: test_audio_probe_runner.cpp  test_common.cpp  test_control.cpp  test_json_envelope.cpp  test_media_control_http_helpers.cpp  test_media_probe_runner.cpp  test_state.cpp  test_window_control_http_helpers.cpp  test_window_probe_runner.cpp  test_window_state.cpp
backend/tools/: CMakeLists.txt
backend/tools/probes/: CMakeLists.txt
backend/tools/probes/audio_control_probe/: audio_control_probe_runner.cpp
backend/tools/probes/audio_probe/: main.cpp
backend/tools/probes/media_probe/: CMakeLists.txt  main.cpp  media_probe_runner.cpp  media_probe_runner.h
backend/tools/probes/window_probe/: CMakeLists.txt  main.cpp  window_probe_helper.cpp  window_probe_runner.cpp  window_probe_runner.h
clients/: README.md
clients/app/: README.md
clients/web/: CHANGELOG.md  README.md  index.html  package-lock.json  package.json
clients/web/docs/: development.md  usage.md
clients/web/src/: main.tsx
clients/web/src/api/: connectivity.ts  controls.test.ts  controls.ts  endpoints.test.ts  endpoints.ts  models.ts  settings.test.ts  settings.ts  state.test.ts  state.ts  useStateStream.ts
clients/web/src/app/: App.tsx  ConnectionScreen.tsx  Dashboard.tsx
clients/web/src/components/: AudioSection.tsx  EndpointField.tsx  MediaSection.tsx  SettingsDialog.tsx  StatusPanel.tsx  ThemeToggle.tsx  WindowTaskbar.tsx
clients/web/src/theme/: breeze.css  theme.ts
docs/: README.md  api.md  architecture.md  development.md  getting-started.md  interfaces.md  roadmap.md
docs/api/: README.md  asyncapi.yaml  openapi.yaml
docs/decisions/: 0001-foundation.md
specs/: README.md  asyncapi.yaml  openapi.yaml
src/: CMakeLists.txt
src/adapters/audio/: CMakeLists.txt  pulse_audio_device_controller.cpp  pulse_audio_device_controller.h  pulse_audio_sink_observer.cpp  pulse_audio_sink_observer.h  pulse_audio_volume_controller.h
src/adapters/window/: kwin_script_window_backend.cpp  plasma_wayland_window_observer.cpp  plasma_wayland_window_observer.h
src/api/: CMakeLists.txt  audio_control_http_helpers.cpp  audio_websocket_server.cpp  audio_websocket_server.h  json_envelope.cpp  prepare_docs_assets.cmake  snapshot_http_server.cpp  snapshot_http_server.h  state_websocket_server.cpp  state_websocket_server.h
src/api/docs_assets/: http.html  index.html  ws.html
src/app/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  audio_state.cpp  audio_state.h  plasma_bridge_build_config.h.in  window_state.cpp  window_state.h
src/control/: CMakeLists.txt  audio_device_controller.cpp
src/state/: CMakeLists.txt  audio_state_store.cpp  audio_state_store.h  window_state_store.cpp  window_state_store.h
tests/: CMakeLists.txt
tests/feature/: test_audio_websocket_server.cpp  test_cli_binaries.cpp  test_snapshot_http_server.cpp  test_state_websocket_server.cpp
tests/helpers/: fake_window_probe_cli.cpp
tests/support/: test_support.cpp  test_support.h
tests/unit/: test_audio_control_http_helpers.cpp  test_audio_control_probe_runner.cpp  test_audio_probe_runner.cpp  test_common.cpp  test_control.cpp  test_state.cpp  test_window_probe_runner.cpp  test_window_state.cpp
tools/probes/: CMakeLists.txt
tools/probes/audio_control_probe/: CMakeLists.txt  audio_control_probe_runner.cpp  audio_control_probe_runner.h  main.cpp
tools/probes/audio_probe/: CMakeLists.txt  audio_probe_runner.cpp  audio_probe_runner.h  main.cpp
tools/probes/window_probe/: CMakeLists.txt  main.cpp  window_probe_runner.cpp  window_probe_runner.h
